Fix the forum jump dropdown defaulting to open

--- a/theme/common.css
+++ b/theme/common.css
@@ -441,6 +441,7 @@ ul.linklist.bulletin > li.no-bulletin:before {
 }
 
 .dropdown {
+	display: none;
 	position: absolute;
 	left: 0;
 	top: 1.2em;
